deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sam-server
  labels:
    app: sam
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sam
      component: server
  template:
    metadata:
      labels:
        app: sam
        component: server
    spec:
      containers:
        - name: server
          image: sam:server
          ports:
            - containerPort: 4000
              name: server-port
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sam-client
  labels:
    app: sam
    component: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sam
      component: client
  template:
    metadata:
      labels:
        app: sam
        component: client
    spec:
      containers:
        - name: client
          image: sam:client
          ports:
            - containerPort: 3000
              name: client-port
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
