deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sam-client
  labels:
    app: sam
    component: client

spec:
  type: NodePort
  selector:
    app: sam
    component: client

  ports:
    - protocol: TCP
      port: 80
      targetPort: client-port # <- client container port in deployment.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: sam-server
  labels:
    app: sam
    component: server

spec:
  type: NodePort
  selector:
    app: sam
    component: server

  ports:
    - protocol: TCP
      port: 5000
      targetPort: server-port
